grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVDER
    LLAVIZQ
    PUNTO

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print_instr LINEANUEVA
Rule 5     instruccion -> println_instr LINEANUEVA
Rule 6     instruccion -> asignacion_instr LINEANUEVA
Rule 7     instruccion -> asignacion_arreglo_instr LINEANUEVA
Rule 8     instruccion -> definicion_asignacion_instr LINEANUEVA
Rule 9     instruccion -> call_function LINEANUEVA
Rule 10    instruccion -> declare_function LINEANUEVA
Rule 11    instruccion -> return_state LINEANUEVA
Rule 12    instruccion -> break_state LINEANUEVA
Rule 13    instruccion -> continue_state LINEANUEVA
Rule 14    instruccion -> if_state LINEANUEVA
Rule 15    instruccion -> while_state LINEANUEVA
Rule 16    instruccion -> for_state LINEANUEVA
Rule 17    instruccion -> nativas LINEANUEVA
Rule 18    instruccion -> expression LINEANUEVA
Rule 19    expression -> MENOS expression
Rule 20    expression -> NOT expression
Rule 21    expression -> expression MAS expression
Rule 22    expression -> expression MENOS expression
Rule 23    expression -> expression POR expression
Rule 24    expression -> expression DIVIDIDO expression
Rule 25    expression -> expression POTENCIA expression
Rule 26    expression -> expression MODULO expression
Rule 27    expression -> expression MAYQUE expression
Rule 28    expression -> expression MENQUE expression
Rule 29    expression -> expression MENIGUALQUE expression
Rule 30    expression -> expression MAYIGUALQUE expression
Rule 31    expression -> expression IGUALQUE expression
Rule 32    expression -> expression NIGUALQUE expression
Rule 33    expression -> expression OR expression
Rule 34    expression -> expression AND expression
Rule 35    expression -> final_expression
Rule 36    final_expression -> PARIZQ expression PARDER
Rule 37    final_expression -> CORCHETEIZQ exp_list CORCHETEDER
Rule 38    final_expression -> DECIMAL
Rule 39    final_expression -> ENTERO
Rule 40    final_expression -> CADENA
Rule 41    final_expression -> ID
Rule 42    final_expression -> ID index_list
Rule 43    final_expression -> TRUE
Rule 44    final_expression -> FALSE
Rule 45    final_expression -> call_function
Rule 46    final_expression -> nativas
Rule 47    nativas -> UPPER PARIZQ expression PARDER
Rule 48    nativas -> LOWER PARIZQ expression PARDER
Rule 49    nativas -> STR PARIZQ expression PARDER
Rule 50    nativas -> FLOAT PARIZQ expression PARDER
Rule 51    nativas -> LEN PARIZQ expression PARDER
Rule 52    print_instr -> PRINT PARIZQ exp_list PARDER
Rule 53    println_instr -> PRINTLN PARIZQ exp_list PARDER
Rule 54    tipo -> INT
Rule 55    tipo -> FLOAT
Rule 56    tipo -> BOOL
Rule 57    tipo -> STR
Rule 58    tipo -> NONE
Rule 59    asignacion_instr -> ID IGUAL expression
Rule 60    definicion_asignacion_instr -> ID DOSP tipo IGUAL expression
Rule 61    asignacion_arreglo_instr -> ID index_list IGUAL expression
Rule 62    call_function -> ID PARIZQ PARDER
Rule 63    call_function -> ID PARIZQ exp_list PARDER
Rule 64    exp_list -> exp_list COMA expression
Rule 65    exp_list -> expression
Rule 66    index_list -> index_list CORCHETEIZQ expression CORCHETEDER
Rule 67    index_list -> CORCHETEIZQ expression CORCHETEDER
Rule 68    statement -> instrucciones
Rule 69    declare_function -> DEF ID PARIZQ dec_params PARDER DOSP statement END
Rule 70    declare_function -> DEF ID PARIZQ PARDER DOSP statement END
Rule 71    dec_params -> dec_params COMA ID DOSP tipo
Rule 72    dec_params -> dec_params COMA ID
Rule 73    dec_params -> ID DOSP tipo
Rule 74    dec_params -> ID
Rule 75    if_state -> IF expression DOSP statement END
Rule 76    if_state -> IF expression DOSP statement ELSE DOSP statement END
Rule 77    if_state -> IF expression DOSP statement else_if_list END
Rule 78    else_if_list -> ELIF expression DOSP statement
Rule 79    else_if_list -> ELIF expression DOSP statement ELSE statement
Rule 80    else_if_list -> ELIF expression DOSP statement else_if_list
Rule 81    while_state -> WHILE expression DOSP statement END
Rule 82    for_state -> FOR ID IN expression DOSP expression DOSP statement END
Rule 83    for_state -> FOR ID IN expression DOSP statement END
Rule 84    break_state -> BREAK
Rule 85    continue_state -> CONTINUE
Rule 86    return_state -> RETURN
Rule 87    return_state -> RETURN expression

Terminals, with rules where they appear

AND                  : 34
BOOL                 : 56
BREAK                : 84
CADENA               : 40
COMA                 : 64 71 72
CONTINUE             : 85
CORCHETEDER          : 37 66 67
CORCHETEIZQ          : 37 66 67
DECIMAL              : 38
DEF                  : 69 70
DIVIDIDO             : 24
DOSP                 : 60 69 70 71 73 75 76 76 77 78 79 80 81 82 82 83
ELIF                 : 78 79 80
ELSE                 : 76 79
END                  : 69 70 75 76 77 81 82 83
ENTERO               : 39
FALSE                : 44
FLOAT                : 50 55
FOR                  : 82 83
ID                   : 41 42 59 60 61 62 63 69 70 71 72 73 74 82 83
IF                   : 75 76 77
IGUAL                : 59 60 61
IGUALQUE             : 31
IN                   : 82 83
INT                  : 54
LEN                  : 51
LINEANUEVA           : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
LLAVDER              : 
LLAVIZQ              : 
LOWER                : 48
MAS                  : 21
MAYIGUALQUE          : 30
MAYQUE               : 27
MENIGUALQUE          : 29
MENOS                : 19 22
MENQUE               : 28
MODULO               : 26
NIGUALQUE            : 32
NONE                 : 58
NOT                  : 20
OR                   : 33
PARDER               : 36 47 48 49 50 51 52 53 62 63 69 70
PARIZQ               : 36 47 48 49 50 51 52 53 62 63 69 70
POR                  : 23
POTENCIA             : 25
PRINT                : 52
PRINTLN              : 53
PUNTO                : 
RETURN               : 86 87
STR                  : 49 57
TRUE                 : 43
UPPER                : 47
WHILE                : 81
error                : 

Nonterminals, with rules where they appear

asignacion_arreglo_instr : 7
asignacion_instr     : 6
break_state          : 12
call_function        : 9 45
continue_state       : 13
dec_params           : 69 71 72
declare_function     : 10
definicion_asignacion_instr : 8
else_if_list         : 77 80
exp_list             : 37 52 53 63 64
expression           : 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 36 47 48 49 50 51 59 60 61 64 65 66 67 75 76 77 78 79 80 81 82 82 83 87
final_expression     : 35
for_state            : 16
if_state             : 14
index_list           : 42 61 66
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 68
nativas              : 17 46
print_instr          : 4
println_instr        : 5
return_state         : 11
statement            : 69 70 75 76 76 77 78 79 79 80 81 82 83
tipo                 : 60 71 73
while_state          : 15

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print_instr LINEANUEVA
    (5) instruccion -> . println_instr LINEANUEVA
    (6) instruccion -> . asignacion_instr LINEANUEVA
    (7) instruccion -> . asignacion_arreglo_instr LINEANUEVA
    (8) instruccion -> . definicion_asignacion_instr LINEANUEVA
    (9) instruccion -> . call_function LINEANUEVA
    (10) instruccion -> . declare_function LINEANUEVA
    (11) instruccion -> . return_state LINEANUEVA
    (12) instruccion -> . break_state LINEANUEVA
    (13) instruccion -> . continue_state LINEANUEVA
    (14) instruccion -> . if_state LINEANUEVA
    (15) instruccion -> . while_state LINEANUEVA
    (16) instruccion -> . for_state LINEANUEVA
    (17) instruccion -> . nativas LINEANUEVA
    (18) instruccion -> . expression LINEANUEVA
    (52) print_instr -> . PRINT PARIZQ exp_list PARDER
    (53) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (59) asignacion_instr -> . ID IGUAL expression
    (61) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (60) definicion_asignacion_instr -> . ID DOSP tipo IGUAL expression
    (62) call_function -> . ID PARIZQ PARDER
    (63) call_function -> . ID PARIZQ exp_list PARDER
    (69) declare_function -> . DEF ID PARIZQ dec_params PARDER DOSP statement END
    (70) declare_function -> . DEF ID PARIZQ PARDER DOSP statement END
    (86) return_state -> . RETURN
    (87) return_state -> . RETURN expression
    (84) break_state -> . BREAK
    (85) continue_state -> . CONTINUE
    (75) if_state -> . IF expression DOSP statement END
    (76) if_state -> . IF expression DOSP statement ELSE DOSP statement END
    (77) if_state -> . IF expression DOSP statement else_if_list END
    (81) while_state -> . WHILE expression DOSP statement END
    (82) for_state -> . FOR ID IN expression DOSP expression DOSP statement END
    (83) for_state -> . FOR ID IN expression DOSP statement END
    (47) nativas -> . UPPER PARIZQ expression PARDER
    (48) nativas -> . LOWER PARIZQ expression PARDER
    (49) nativas -> . STR PARIZQ expression PARDER
    (50) nativas -> . FLOAT PARIZQ expression PARDER
    (51) nativas -> . LEN PARIZQ expression PARDER
    (19) expression -> . MENOS expression
    (20) expression -> . NOT expression
    (21) expression -> . expression MAS expression
    (22) expression -> . expression MENOS expression
    (23) expression -> . expression POR expression
    (24) expression -> . expression DIVIDIDO expression
    (25) expression -> . expression POTENCIA expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . expression MAYQUE expression
    (28) expression -> . expression MENQUE expression
    (29) expression -> . expression MENIGUALQUE expression
    (30) expression -> . expression MAYIGUALQUE expression
    (31) expression -> . expression IGUALQUE expression
    (32) expression -> . expression NIGUALQUE expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression AND expression
    (35) expression -> . final_expression
    (36) final_expression -> . PARIZQ expression PARDER
    (37) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (38) final_expression -> . DECIMAL
    (39) final_expression -> . ENTERO
    (40) final_expression -> . CADENA
    (41) final_expression -> . ID
    (42) final_expression -> . ID index_list
    (43) final_expression -> . TRUE
    (44) final_expression -> . FALSE
    (45) final_expression -> . call_function
    (46) final_expression -> . nativas

    PRINT           shift and go to state 19
    PRINTLN         shift and go to state 21
    ID              shift and go to state 22
    DEF             shift and go to state 23
    RETURN          shift and go to state 24
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    UPPER           shift and go to state 30
    LOWER           shift and go to state 31
    STR             shift and go to state 32
    FLOAT           shift and go to state 33
    LEN             shift and go to state 34
    MENOS           shift and go to state 35
    NOT             shift and go to state 36
    PARIZQ          shift and go to state 20
    CORCHETEIZQ     shift and go to state 38
    DECIMAL         shift and go to state 39
    ENTERO          shift and go to state 40
    CADENA          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    asignacion_instr               shift and go to state 6
    asignacion_arreglo_instr       shift and go to state 7
    definicion_asignacion_instr    shift and go to state 8
    call_function                  shift and go to state 9
    declare_function               shift and go to state 10
    return_state                   shift and go to state 11
    break_state                    shift and go to state 12
    continue_state                 shift and go to state 13
    if_state                       shift and go to state 14
    while_state                    shift and go to state 15
    for_state                      shift and go to state 16
    nativas                        shift and go to state 17
    expression                     shift and go to state 18
    final_expression               shift and go to state 37

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print_instr LINEANUEVA
    (5) instruccion -> . println_instr LINEANUEVA
    (6) instruccion -> . asignacion_instr LINEANUEVA
    (7) instruccion -> . asignacion_arreglo_instr LINEANUEVA
    (8) instruccion -> . definicion_asignacion_instr LINEANUEVA
    (9) instruccion -> . call_function LINEANUEVA
    (10) instruccion -> . declare_function LINEANUEVA
    (11) instruccion -> . return_state LINEANUEVA
    (12) instruccion -> . break_state LINEANUEVA
    (13) instruccion -> . continue_state LINEANUEVA
    (14) instruccion -> . if_state LINEANUEVA
    (15) instruccion -> . while_state LINEANUEVA
    (16) instruccion -> . for_state LINEANUEVA
    (17) instruccion -> . nativas LINEANUEVA
    (18) instruccion -> . expression LINEANUEVA
    (52) print_instr -> . PRINT PARIZQ exp_list PARDER
    (53) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (59) asignacion_instr -> . ID IGUAL expression
    (61) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (60) definicion_asignacion_instr -> . ID DOSP tipo IGUAL expression
    (62) call_function -> . ID PARIZQ PARDER
    (63) call_function -> . ID PARIZQ exp_list PARDER
    (69) declare_function -> . DEF ID PARIZQ dec_params PARDER DOSP statement END
    (70) declare_function -> . DEF ID PARIZQ PARDER DOSP statement END
    (86) return_state -> . RETURN
    (87) return_state -> . RETURN expression
    (84) break_state -> . BREAK
    (85) continue_state -> . CONTINUE
    (75) if_state -> . IF expression DOSP statement END
    (76) if_state -> . IF expression DOSP statement ELSE DOSP statement END
    (77) if_state -> . IF expression DOSP statement else_if_list END
    (81) while_state -> . WHILE expression DOSP statement END
    (82) for_state -> . FOR ID IN expression DOSP expression DOSP statement END
    (83) for_state -> . FOR ID IN expression DOSP statement END
    (47) nativas -> . UPPER PARIZQ expression PARDER
    (48) nativas -> . LOWER PARIZQ expression PARDER
    (49) nativas -> . STR PARIZQ expression PARDER
    (50) nativas -> . FLOAT PARIZQ expression PARDER
    (51) nativas -> . LEN PARIZQ expression PARDER
    (19) expression -> . MENOS expression
    (20) expression -> . NOT expression
    (21) expression -> . expression MAS expression
    (22) expression -> . expression MENOS expression
    (23) expression -> . expression POR expression
    (24) expression -> . expression DIVIDIDO expression
    (25) expression -> . expression POTENCIA expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . expression MAYQUE expression
    (28) expression -> . expression MENQUE expression
    (29) expression -> . expression MENIGUALQUE expression
    (30) expression -> . expression MAYIGUALQUE expression
    (31) expression -> . expression IGUALQUE expression
    (32) expression -> . expression NIGUALQUE expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression AND expression
    (35) expression -> . final_expression
    (36) final_expression -> . PARIZQ expression PARDER
    (37) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (38) final_expression -> . DECIMAL
    (39) final_expression -> . ENTERO
    (40) final_expression -> . CADENA
    (41) final_expression -> . ID
    (42) final_expression -> . ID index_list
    (43) final_expression -> . TRUE
    (44) final_expression -> . FALSE
    (45) final_expression -> . call_function
    (46) final_expression -> . nativas

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 19
    PRINTLN         shift and go to state 21
    ID              shift and go to state 22
    DEF             shift and go to state 23
    RETURN          shift and go to state 24
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    UPPER           shift and go to state 30
    LOWER           shift and go to state 31
    STR             shift and go to state 32
    FLOAT           shift and go to state 33
    LEN             shift and go to state 34
    MENOS           shift and go to state 35
    NOT             shift and go to state 36
    PARIZQ          shift and go to state 20
    CORCHETEIZQ     shift and go to state 38
    DECIMAL         shift and go to state 39
    ENTERO          shift and go to state 40
    CADENA          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    instruccion                    shift and go to state 44
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    asignacion_instr               shift and go to state 6
    asignacion_arreglo_instr       shift and go to state 7
    definicion_asignacion_instr    shift and go to state 8
    call_function                  shift and go to state 9
    declare_function               shift and go to state 10
    return_state                   shift and go to state 11
    break_state                    shift and go to state 12
    continue_state                 shift and go to state 13
    if_state                       shift and go to state 14
    while_state                    shift and go to state 15
    for_state                      shift and go to state 16
    nativas                        shift and go to state 17
    expression                     shift and go to state 18
    final_expression               shift and go to state 37

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    DEF             reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    UPPER           reduce using rule 3 (instrucciones -> instruccion .)
    LOWER           reduce using rule 3 (instrucciones -> instruccion .)
    STR             reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    LEN             reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    CORCHETEIZQ     reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELIF            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print_instr . LINEANUEVA

    LINEANUEVA      shift and go to state 45


state 5

    (5) instruccion -> println_instr . LINEANUEVA

    LINEANUEVA      shift and go to state 46


state 6

    (6) instruccion -> asignacion_instr . LINEANUEVA

    LINEANUEVA      shift and go to state 47


state 7

    (7) instruccion -> asignacion_arreglo_instr . LINEANUEVA

    LINEANUEVA      shift and go to state 48


state 8

    (8) instruccion -> definicion_asignacion_instr . LINEANUEVA

    LINEANUEVA      shift and go to state 49


state 9

    (9) instruccion -> call_function . LINEANUEVA
    (45) final_expression -> call_function .

  ! shift/reduce conflict for LINEANUEVA resolved as shift
    LINEANUEVA      shift and go to state 50
    MAS             reduce using rule 45 (final_expression -> call_function .)
    MENOS           reduce using rule 45 (final_expression -> call_function .)
    POR             reduce using rule 45 (final_expression -> call_function .)
    DIVIDIDO        reduce using rule 45 (final_expression -> call_function .)
    POTENCIA        reduce using rule 45 (final_expression -> call_function .)
    MODULO          reduce using rule 45 (final_expression -> call_function .)
    MAYQUE          reduce using rule 45 (final_expression -> call_function .)
    MENQUE          reduce using rule 45 (final_expression -> call_function .)
    MENIGUALQUE     reduce using rule 45 (final_expression -> call_function .)
    MAYIGUALQUE     reduce using rule 45 (final_expression -> call_function .)
    IGUALQUE        reduce using rule 45 (final_expression -> call_function .)
    NIGUALQUE       reduce using rule 45 (final_expression -> call_function .)
    OR              reduce using rule 45 (final_expression -> call_function .)
    AND             reduce using rule 45 (final_expression -> call_function .)

  ! LINEANUEVA      [ reduce using rule 45 (final_expression -> call_function .) ]


state 10

    (10) instruccion -> declare_function . LINEANUEVA

    LINEANUEVA      shift and go to state 51


state 11

    (11) instruccion -> return_state . LINEANUEVA

    LINEANUEVA      shift and go to state 52


state 12

    (12) instruccion -> break_state . LINEANUEVA

    LINEANUEVA      shift and go to state 53


state 13

    (13) instruccion -> continue_state . LINEANUEVA

    LINEANUEVA      shift and go to state 54


state 14

    (14) instruccion -> if_state . LINEANUEVA

    LINEANUEVA      shift and go to state 55


state 15

    (15) instruccion -> while_state . LINEANUEVA

    LINEANUEVA      shift and go to state 56


state 16

    (16) instruccion -> for_state . LINEANUEVA

    LINEANUEVA      shift and go to state 57


state 17

    (17) instruccion -> nativas . LINEANUEVA
    (46) final_expression -> nativas .

  ! shift/reduce conflict for LINEANUEVA resolved as shift
    LINEANUEVA      shift and go to state 58
    MAS             reduce using rule 46 (final_expression -> nativas .)
    MENOS           reduce using rule 46 (final_expression -> nativas .)
    POR             reduce using rule 46 (final_expression -> nativas .)
    DIVIDIDO        reduce using rule 46 (final_expression -> nativas .)
    POTENCIA        reduce using rule 46 (final_expression -> nativas .)
    MODULO          reduce using rule 46 (final_expression -> nativas .)
    MAYQUE          reduce using rule 46 (final_expression -> nativas .)
    MENQUE          reduce using rule 46 (final_expression -> nativas .)
    MENIGUALQUE     reduce using rule 46 (final_expression -> nativas .)
    MAYIGUALQUE     reduce using rule 46 (final_expression -> nativas .)
    IGUALQUE        reduce using rule 46 (final_expression -> nativas .)
    NIGUALQUE       reduce using rule 46 (final_expression -> nativas .)
    OR              reduce using rule 46 (final_expression -> nativas .)
    AND             reduce using rule 46 (final_expression -> nativas .)

  ! LINEANUEVA      [ reduce using rule 46 (final_expression -> nativas .) ]


state 18

    (18) instruccion -> expression . LINEANUEVA
    (21) expression -> expression . MAS expression
    (22) expression -> expression . MENOS expression
    (23) expression -> expression . POR expression
    (24) expression -> expression . DIVIDIDO expression
    (25) expression -> expression . POTENCIA expression
    (26) expression -> expression . MODULO expression
    (27) expression -> expression . MAYQUE expression
    (28) expression -> expression . MENQUE expression
    (29) expression -> expression . MENIGUALQUE expression
    (30) expression -> expression . MAYIGUALQUE expression
    (31) expression -> expression . IGUALQUE expression
    (32) expression -> expression . NIGUALQUE expression
    (33) expression -> expression . OR expression
    (34) expression -> expression . AND expression

    LINEANUEVA      shift and go to state 59
    MAS             shift and go to state 60
    MENOS           shift and go to state 61
    POR             shift and go to state 62
    DIVIDIDO        shift and go to state 63
    POTENCIA        shift and go to state 64
    MODULO          shift and go to state 65
    MAYQUE          shift and go to state 66
    MENQUE          shift and go to state 67
    MENIGUALQUE     shift and go to state 68
    MAYIGUALQUE     shift and go to state 69
    IGUALQUE        shift and go to state 70
    NIGUALQUE       shift and go to state 71
    OR              shift and go to state 72
    AND             shift and go to state 73


state 19

    (52) print_instr -> PRINT . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 74


state 20

    (36) final_expression -> PARIZQ . expression PARDER
    (19) expression -> . MENOS expression
    (20) expression -> . NOT expression
    (21) expression -> . expression MAS expression
    (22) expression -> . expression MENOS expression
    (23) expression -> . expression POR expression
    (24) expression -> . expression DIVIDIDO expression
    (25) expression -> . expression POTENCIA expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . expression MAYQUE expression
    (28) expression -> . expression MENQUE expression
    (29) expression -> . expression MENIGUALQUE expression
    (30) expression -> . expression MAYIGUALQUE expression
    (31) expression -> . expression IGUALQUE expression
    (32) expression -> . expression NIGUALQUE expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression AND expression
    (35) expression -> . final_expression
    (36) final_expression -> . PARIZQ expression PARDER
    (37) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (38) final_expression -> . DECIMAL
    (39) final_expression -> . ENTERO
    (40) final_expression -> . CADENA
    (41) final_expression -> . ID
    (42) final_expression -> . ID index_list
    (43) final_expression -> . TRUE
    (44) final_expression -> . FALSE
    (45) final_expression -> . call_function
    (46) final_expression -> . nativas
    (62) call_function -> . ID PARIZQ PARDER
    (63) call_function -> . ID PARIZQ exp_list PARDER
    (47) nativas -> . UPPER PARIZQ expression PARDER
    (48) nativas -> . LOWER PARIZQ expression PARDER
    (49) nativas -> . STR PARIZQ expression PARDER
    (50) nativas -> . FLOAT PARIZQ expression PARDER
    (51) nativas -> . LEN PARIZQ expression PARDER

    MENOS           shift and go to state 35
    NOT             shift and go to state 36
    PARIZQ          shift and go to state 20
    CORCHETEIZQ     shift and go to state 38
    DECIMAL         shift and go to state 39
    ENTERO          shift and go to state 40
    CADENA          shift and go to state 41
    ID              shift and go to state 76
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    UPPER           shift and go to state 30
    LOWER           shift and go to state 31
    STR             shift and go to state 32
    FLOAT           shift and go to state 33
    LEN             shift and go to state 34

    expression                     shift and go to state 75
    final_expression               shift and go to state 37
    call_function                  shift and go to state 77
    nativas                        shift and go to state 78

state 21

    (53) println_instr -> PRINTLN . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 79


state 22

    (59) asignacion_instr -> ID . IGUAL expression
    (61) asignacion_arreglo_instr -> ID . index_list IGUAL expression
    (60) definicion_asignacion_instr -> ID . DOSP tipo IGUAL expression
    (62) call_function -> ID . PARIZQ PARDER
    (63) call_function -> ID . PARIZQ exp_list PARDER
    (41) final_expression -> ID .
    (42) final_expression -> ID . index_list
    (66) index_list -> . index_list CORCHETEIZQ expression CORCHETEDER
    (67) index_list -> . CORCHETEIZQ expression CORCHETEDER

    IGUAL           shift and go to state 80
    DOSP            shift and go to state 82
    PARIZQ          shift and go to state 83
    LINEANUEVA      reduce using rule 41 (final_expression -> ID .)
    MAS             reduce using rule 41 (final_expression -> ID .)
    MENOS           reduce using rule 41 (final_expression -> ID .)
    POR             reduce using rule 41 (final_expression -> ID .)
    DIVIDIDO        reduce using rule 41 (final_expression -> ID .)
    POTENCIA        reduce using rule 41 (final_expression -> ID .)
    MODULO          reduce using rule 41 (final_expression -> ID .)
    MAYQUE          reduce using rule 41 (final_expression -> ID .)
    MENQUE          reduce using rule 41 (final_expression -> ID .)
    MENIGUALQUE     reduce using rule 41 (final_expression -> ID .)
    MAYIGUALQUE     reduce using rule 41 (final_expression -> ID .)
    IGUALQUE        reduce using rule 41 (final_expression -> ID .)
    NIGUALQUE       reduce using rule 41 (final_expression -> ID .)
    OR              reduce using rule 41 (final_expression -> ID .)
    AND             reduce using rule 41 (final_expression -> ID .)
    CORCHETEIZQ     shift and go to state 84

    index_list                     shift and go to state 81

state 23

    (69) declare_function -> DEF . ID PARIZQ dec_params PARDER DOSP statement END
    (70) declare_function -> DEF . ID PARIZQ PARDER DOSP statement END

    ID              shift and go to state 85


state 24

    (86) return_state -> RETURN .
    (87) return_state -> RETURN . expression
    (19) expression -> . MENOS expression
    (20) expression -> . NOT expression
    (21) expression -> . expression MAS expression
    (22) expression -> . expression MENOS expression
    (23) expression -> . expression POR expression
    (24) expression -> . expression DIVIDIDO expression
    (25) expression -> . expression POTENCIA expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . expression MAYQUE expression
    (28) expression -> . expression MENQUE expression
    (29) expression -> . expression MENIGUALQUE expression
    (30) expression -> . expression MAYIGUALQUE expression
    (31) expression -> . expression IGUALQUE expression
    (32) expression -> . expression NIGUALQUE expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression AND expression
    (35) expression -> . final_expression
    (36) final_expression -> . PARIZQ expression PARDER
    (37) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (38) final_expression -> . DECIMAL
    (39) final_expression -> . ENTERO
    (40) final_expression -> . CADENA
    (41) final_expression -> . ID
    (42) final_expression -> . ID index_list
    (43) final_expression -> . TRUE
    (44) final_expression -> . FALSE
    (45) final_expression -> . call_function
    (46) final_expression -> . nativas
    (62) call_function -> . ID PARIZQ PARDER
    (63) call_function -> . ID PARIZQ exp_list PARDER
    (47) nativas -> . UPPER PARIZQ expression PARDER
    (48) nativas -> . LOWER PARIZQ expression PARDER
    (49) nativas -> . STR PARIZQ expression PARDER
    (50) nativas -> . FLOAT PARIZQ expression PARDER
    (51) nativas -> . LEN PARIZQ expression PARDER

    LINEANUEVA      reduce using rule 86 (return_state -> RETURN .)
    MENOS           shift and go to state 35
    NOT             shift and go to state 36
    PARIZQ          shift and go to state 20
    CORCHETEIZQ     shift and go to state 38
    DECIMAL         shift and go to state 39
    ENTERO          shift and go to state 40
    CADENA          shift and go to state 41
    ID              shift and go to state 76
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    UPPER           shift and go to state 30
    LOWER           shift and go to state 31
    STR             shift and go to state 32
    FLOAT           shift and go to state 33
    LEN             shift and go to state 34

    expression                     shift and go to state 86
    final_expression               shift and go to state 37
    call_function                  shift and go to state 77
    nativas                        shift and go to state 78

state 25

    (84) break_state -> BREAK .

    LINEANUEVA      reduce using rule 84 (break_state -> BREAK .)


state 26

    (85) continue_state -> CONTINUE .

    LINEANUEVA      reduce using rule 85 (continue_state -> CONTINUE .)


state 27

    (75) if_state -> IF . expression DOSP statement END
    (76) if_state -> IF . expression DOSP statement ELSE DOSP statement END
    (77) if_state -> IF . expression DOSP statement else_if_list END
    (19) expression -> . MENOS expression
    (20) expression -> . NOT expression
    (21) expression -> . expression MAS expression
    (22) expression -> . expression MENOS expression
    (23) expression -> . expression POR expression
    (24) expression -> . expression DIVIDIDO expression
    (25) expression -> . expression POTENCIA expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . expression MAYQUE expression
    (28) expression -> . expression MENQUE expression
    (29) expression -> . expression MENIGUALQUE expression
    (30) expression -> . expression MAYIGUALQUE expression
    (31) expression -> . expression IGUALQUE expression
    (32) expression -> . expression NIGUALQUE expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression AND expression
    (35) expression -> . final_expression
    (36) final_expression -> . PARIZQ expression PARDER
    (37) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (38) final_expression -> . DECIMAL
    (39) final_expression -> . ENTERO
    (40) final_expression -> . CADENA
    (41) final_expression -> . ID
    (42) final_expression -> . ID index_list
    (43) final_expression -> . TRUE
    (44) final_expression -> . FALSE
    (45) final_expression -> . call_function
    (46) final_expression -> . nativas
    (62) call_function -> . ID PARIZQ PARDER
    (63) call_function -> . ID PARIZQ exp_list PARDER
    (47) nativas -> . UPPER PARIZQ expression PARDER
    (48) nativas -> . LOWER PARIZQ expression PARDER
    (49) nativas -> . STR PARIZQ expression PARDER
    (50) nativas -> . FLOAT PARIZQ expression PARDER
    (51) nativas -> . LEN PARIZQ expression PARDER
